# research2workflow

./: .gitignore
v1/researchflow/: README.md  pyproject.toml
v1/researchflow/examples/: basic_research.py
v1/researchflow/src/researchflow/: __init__.py  adapters.py  clustering.py  legacy_pipeline.py  pipeline.py  regime.py  registry.py  research.py  sleeves.py  stress.py  validation.py
v1/researchflow/src/researchflow/legacy_template/: __init__.py  analyzer.py  combination.py  metrics.py  portfolio.py  score.py  web.py
v1/researchflow/tests/: test_extended_methods.py  test_factor_registry.py  test_legacy_method_coverage.py  test_monitoring_and_adapter.py  test_research_flow.py
v1/shared/: README.md  pyproject.toml
v1/shared/src/quant_shared/: __init__.py  alpha.py  artifacts.py  cifsLoader.py  combination.py  config.py  contracts.py  local_data.py  math_utils.py  preprocessing.py  restoreSHOrder.py  transforms.py
v1/shared/tests/: test_local_data.py
v1/workflow/: .gitignore  README.md  pyproject.toml
v1/workflow/docs/: PROJECT_MIND_MAP.md  RESEARCH_PRODUCTION_BOUNDARY.md  TRADING_ARCHITECTURE.md
v1/workflow/examples/: basic_workflow.py  daily_production.py  l2_preprocess.py  l2_replay.py  l2_stream_benchmark.py
v1/workflow/src/quant_workflow/: __init__.py  costs.py  execution.py  monitoring.py  portfolio.py  production.py  risk.py
v1/workflow/src/quant_workflow/trading/: __init__.py  (+12 more)
v1/workflow/tests/: test_combination.py  test_orchestration_and_monitoring.py  test_pipeline.py  test_preprocessing.py  test_production_boundary.py  test_risk_and_portfolio.py  test_tonglian_l2_gateway.py  test_trading_engine.py
(+61 files in other folders)
