[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-shared"
version = "0.1.0"
description = "Shared contracts and pure factor-model algorithms"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
l2 = ["polars>=0.20", "pysmb>=1.2"]
